--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "statuspage-api",
-  "version": "0.5.0",
+  "name": "@one000mph/statuspage-api",
+  "version": "0.5.1",
   "description": "A wrapper for select statuspage.io API commands",
   "main": "index.js",
   "scripts": {
@@ -8,20 +8,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:dyninc/statuspage-api.git"
+    "url": "git@github.com:one000mph/statuspage-api.git"
   },
   "keywords": [
     "statuspage",
     "API"
   ],
-  "author": "elarochelle",
+  "author": "one000mph",
   "license": "MIT",
   "devDependencies": {
     "chai": "^2.1.2",
-    "mocha": "^2.2.1",
     "gently": "0.9.2",
-    "semver": "",
-    "jslint": ""
+    "jslint": "",
+    "mocha": "^6.2.0",
+    "semver": ""
   },
   "dependencies": {
     "underscore": "1.8.2",
