--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "semver": ""
   },
   "dependencies": {
-    "underscore": "1.8.2",
-    "qs": "2.4.1"
+    "qs": "6.9.1",
+    "underscore": "1.8.2"
   }
 }
